--- a/appsettings.json
+++ b/appsettings.json
@@ -1,26 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sql-server-docker;Database=db_hotel;User Id=SA;Password=TuPassword123!;TrustServerCertificate=True"
-  },
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://0.0.0.0:80"
-      },
-      "Https": {
-        "Url": "https://0.0.0.0:443",
-        "Certificate": {
-          "Path": "/https/aspnetapp.pfx",
-          "Password": "TuCertPassword"
-        }
-      }
-    }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+    "DefaultConnectionVpsLinux": "Server=137.184.133.51,1433;Database=db_hotel;User Id=SA;Password=TuPassword123!;TrustServerCertificate=True",
+    "DefaultConnectionLocalVps": "Server=localhost;Database=db_hotel;User Id=choosing_user;Password=TuPassword123!;TrustServerCertificate=True",
+    "DefaultConnectionLocalMac": "Server=localhost,1433;Database=db_hotel;User Id=SA;Password=MyPassword123;TrustServerCertificate=True;Encrypt=False"
   },
   "JwtConfig": {
     "Secret": "TU_CLAVE_SECRETA_LARGA_MIN_16_CARACTERES",
