actualizacion side server loading testing...

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,8 @@
   "ConnectionStrings": {
     "DefaultConnectionVpsLinux": "Server=137.184.133.51,1433;Database=db_hotel;User Id=SA;Password=TuPassword123!;TrustServerCertificate=True",
     "DefaultConnectionLocalVps": "Server=localhost;Database=db_hotel;User Id=choosing_user;Password=TuPassword123!;TrustServerCertificate=True",
-    "DefaultConnectionLocalMac": "Server=localhost,1433;Database=db_hotel;User Id=SA;Password=MyPassword123;TrustServerCertificate=True;Encrypt=False"
+    "DefaultConnectionLocalMac": "Server=localhost,1433;Database=db_hotel;User Id=SA;Password=MyPassword123;TrustServerCertificate=True;Encrypt=False",
+    "DefaultConnectionMacToVps": "Server=64.20.57.244,1433;Database=db_hotel;User Id=choosing_user;Password=TuPassword123!;TrustServerCertificate=True"
   },
   "JwtConfig": {
     "Secret": "TU_CLAVE_SECRETA_LARGA_MIN_16_CARACTERES",
