agregamos funcion registro y envio de mail backend

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,12 @@
     "Audience": "TuFrontendUrl",
     "ExpirationInMinutes": 60
   },
+  "EmailConfig": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "rafirearte@gmail.com",
+    "SenderName": "Sistema Choosing",
+    "Password": "rwov hxyq firh kooz"
+  },
   "AllowedHosts": "*"
 }
