--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnectionLocalVps": "Server=localhost;Database=db_hotel;User Id=choosing_user;Password=TuPassword123!;TrustServerCertificate=True",
-    "DefaultConnectionLocalMac": "Server=localhost,1433;Database=db_hotel;User Id=SA;Password=MyPassword123;TrustServerCertificate=True;Encrypt=False",
+    "DefaultConnectionLocalMac": "Server=localhost,1433;Database=choosing_db;User Id=SA;Password=MyPassword123;TrustServerCertificate=True;Encrypt=False",
     "DefaultConnectionMacToVps": "Server=64.20.57.244,1433;Database=db_hotel;User Id=choosing_user;Password=TuPassword123!;TrustServerCertificate=True"
   },
   "JwtConfig": {
