--- a/choosing.csproj
+++ b/choosing.csproj
@@ -24,12 +24,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Build.Containers" Version="9.0.200" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.7.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="FrontEnd\" />
   </ItemGroup>
 
 </Project>
